fix: add padding-top to body
To prevent content from overlapping the navigation bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@
         gap: 30px;
     }
 
+    body {
+        padding-top: 35px;
+    }
+
     .h1 {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
